--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,2 @@
-theme: jekyll-theme-slate
+theme: jekyll-theme-cayman
 plugins: ['jekyll-paginate', 'jekyll-sitemap', 'jekyll-include-cache', 'jekyll-gist']
