--- a/catlogging-core/src/main/resources/config/catlogging-version.properties
+++ b/catlogging-core/src/main/resources/config/catlogging-version.properties
@@ -17,4 +17,4 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 ###############################################################################
 # Version property only replaced by Maven during build
-catlogging.version=${project.version}
+catlogging.version=@project.version@
