--- a/catlogging-core/pom.xml
+++ b/catlogging-core/pom.xml
@@ -206,5 +206,10 @@
 			<classifier>standalone</classifier>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>net.java.dev.jna</groupId>
+			<artifactId>jna</artifactId>
+		</dependency>
 	</dependencies>
 </project>
