--- a/pom.xml
+++ b/pom.xml
@@ -274,6 +274,12 @@
 				<artifactId>flyway-core</artifactId>
 				<version>3.2.1</version>
 			</dependency>
+			<dependency>
+				<groupId>net.java.dev.jna</groupId>
+				<artifactId>jna</artifactId>
+				<version>4.2.2</version>
+			</dependency>
+
 		</dependencies>
 	</dependencyManagement>
 
