--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,16 @@
-catlogging.version=@project.version@
-
 server.port=8082
 
+#propertie base
 logging.file.path=${catlogging.home}
-spring.profiles.active=NONE_QA
 
+#first build pom.xml base
+catlogging.version=@project.version@
+spring.profiles.active=@activatedProfile@
+spring.profiles.include=@activatedLog@
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.ddl-auto=update
+
+# default 30min app > spring > embedded tomcat
+#server.servlet.session.timeout=1800
