--- a/src/main/resources/config/catlogging-core.properties
+++ b/src/main/resources/config/catlogging-core.properties
@@ -32,6 +32,7 @@ catlogging.mail.port=25
 catlogging.h2.url=jdbc:h2:${catlogging.home}/h2/catlogging;
 catlogging.h2.user=catlogging
 catlogging.h2.password=catlogging
+catlogging.h2.remoteAccess=@activatedRemoteAccess@
 
 # Elasticsearch
 catlogging.es.indexNamePrefix=catlogging_
