--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,5 +12,11 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=update
 
-# default 30min app > spring > embedded tomcat
-#server.servlet.session.timeout=1800
+catlogging.enable.auth=@activatedAuth@
+# spring default 30min(1800sec) app > spring > embedded tomcat
+# this app is 1hour
+server.servlet.session.timeout=3600
+
+# web user input timeout default 60sec
+# this app is 30min
+web.servlet.session.timeout=1800
