--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,8 @@ spring.profiles.include=@activatedLog@
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=update
+spring.quartz.jdbc.initialize-schema=always
+spring.quartz.job-store-type=jdbc
 
 catlogging.enable.auth=@activatedAuth@
 # spring default 30min(1800sec) app > spring > embedded tomcat
@@ -20,3 +22,4 @@ server.servlet.session.timeout=3600
 # web user input timeout default 60sec
 # this app is 30min
 web.servlet.session.timeout=1800
+#spring.main.allow-circular-references=true
