--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.2.2.RELEASE</version>
+		<version>2.7.3</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.catlogging</groupId>
@@ -38,7 +38,7 @@
 				<activatedProfile>NONE_QA</activatedProfile>
 				<activatedLog>develop-Logback</activatedLog>
 				<activatedRemoteAccess>true</activatedRemoteAccess>
-				<activatedAuth>true</activatedAuth>
+				<activatedAuth>false</activatedAuth>
 			</properties>
 		</profile>
 	</profiles>
@@ -66,11 +66,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-		<dependency>
-			<groupId>com.lmax</groupId>
-			<artifactId>disruptor</artifactId>
-			<version>3.4.0</version>
-		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>com.lmax</groupId>-->
+<!--			<artifactId>disruptor</artifactId>-->
+<!--			<version>3.4.0</version>-->
+<!--		</dependency>-->
 
 		<dependency>
 			<groupId>javax.mail</groupId>
@@ -85,17 +85,12 @@
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
-			<version>2.9.7</version>
-		</dependency>
-		<dependency>
-			<groupId>cglib</groupId>
-			<artifactId>cglib-nodep</artifactId>
-			<version>2.2</version>
+			<version>2.13.3</version>
 		</dependency>
 		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-core</artifactId>
-			<version>1.9.0</version>
+			<version>4.5.1</version>
 		</dependency>
 		<dependency>
 			<groupId>log4j</groupId>
@@ -114,19 +109,14 @@
 			<classifier>jdk15</classifier>
 		</dependency>
 		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.12</version>
-		</dependency>
-		<dependency>
 			<groupId>org.quartz-scheduler</groupId>
 			<artifactId>quartz</artifactId>
-			<version>2.1.7</version>
+			<version>2.3.2</version>
 		</dependency>
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
-			<version>1.4.200</version>
+			<version>2.1.210</version>
 		</dependency>
 		<dependency>
 			<groupId>javax.validation</groupId>
@@ -136,34 +126,33 @@
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-validator</artifactId>
-			<version>5.2.4.Final</version>
+			<version>6.2.4.Final</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
-			<version>3.1</version>
+			<version>3.12.0</version>
 		</dependency>
 		<dependency>
 			<groupId>com.github.tony19</groupId>
 			<artifactId>named-regexp</artifactId>
-			<version>0.2.3</version>
+			<version>0.2.7</version>
 		</dependency>
-
 
 		<dependency>
 			<groupId>org.elasticsearch</groupId>
 			<artifactId>elasticsearch</artifactId>
-			<version>6.3.0</version>
+			<version>6.8.23</version>
 		</dependency>
 		<dependency>
 			<groupId>org.elasticsearch.client</groupId>
 			<artifactId>elasticsearch-rest-client</artifactId>
-			<version>6.3.0</version>
+			<version>6.8.23</version>
 		</dependency>
 		<dependency>
 			<groupId>org.elasticsearch.client</groupId>
 			<artifactId>elasticsearch-rest-high-level-client</artifactId>
-			<version>6.3.0</version>
+			<version>6.8.23</version>
 		</dependency>
 		<dependency>
 			<groupId>pl.allegro.tech</groupId>
@@ -176,7 +165,7 @@
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
-			<version>1.18.4</version>
+			<version>1.18.24</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
@@ -187,12 +176,7 @@
 		<dependency>
 			<groupId>org.flywaydb</groupId>
 			<artifactId>flyway-core</artifactId>
-			<version>8.2.0</version>
-		</dependency>
-		<dependency>
-			<groupId>net.java.dev.jna</groupId>
-			<artifactId>jna</artifactId>
-			<version>4.2.2</version>
+			<version>8.5.13</version>
 		</dependency>
 		<dependency>
 			<groupId>javax.servlet</groupId>
@@ -221,12 +205,12 @@
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-core</artifactId>
-			<version>1.2.9</version>
+			<version>1.2.11</version>
 		</dependency>
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-classic</artifactId>
-			<version>1.2.9</version>
+			<version>1.2.11</version>
 		</dependency>
 	</dependencies>
 
@@ -246,6 +230,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-resources-plugin</artifactId>
+				<version>3.1.0</version>
 				<configuration>
 					<nonFilteredFileExtensions>
 						<nonFilteredFileExtension>eot</nonFilteredFileExtension>
